source/css/scss/objects/_buttons.scss
/*------------------------------------*\
    $BUTTONS
\*------------------------------------*/
.a-btn {
  display: inline-block;
  font-weight: normal;
  position: relative;
  cursor: pointer;
  border: 0px solid transparent;
  padding: 7px $spacer*2 5px $spacer*2;
  font-size: 16px;
  line-height: 24px;
  background: $blue;
  color: $black;
  font-family: $font-reg;
  font-weight: $font-weight-reg;
  margin-bottom: $spacer;
  &:hover {
    background: $blue-hover-color;
    text-decoration: none;
    color: $black;
    border: 0;
  }
  &:focus {
    text-decoration: none;
    outline: 0;
    background: $blue-hover-color;
    border-bottom: none;
    color: $black;
  }
  &:active,
  &.active {
    background-image: none;
    outline: 0;
    @include box-shadow(inset 0 3px 5px rgba(0, 0, 0, .125));
    background: $blue;
    color: $black;
  }
  &.disabled,
  &:disabled {
    cursor: $cursor-disabled;
    background-color: $grey-light;
    color: $black;
    @include box-shadow(none);
    box-shadow: 0px 0px 0px 1px white;
  }
  &:after {
    // Making the touch target area bigger without affecting the layout
    content: "";
    width: 100%;
    height: 48px;
    position: absolute;
    left: 0;
    top: -6px;
  }
  &:before {
    content: "";
    width: auto;
    min-height: auto;
    position: absolute;
    left: 0;
    top: 0;
  }
}

// disabled on business theme
.business {
  .a-btn {
    &.disabled,
    &:disabled {
      background: $blue-light;
    }
  }
}

.a-btn-secondary {
  background-color: $white;
  &:hover {
    background: $grey-light;
  }
}

.a-btn-success {
  background-color: $green;
  color: $black;
  &:hover {
    background: $green-hover-color;
    border: none;
  }
  &:active,
  &.active {
    background: $green;
  }
  &:focus {
    background: $green-hover-color;
  }
  &.disabled,
  &:disabled {
    cursor: $cursor-disabled;
    background-color: $grey-light;
    color: $black;
    @include box-shadow(none);
    box-shadow: 0px 0px 0px 1px white;
  }
}

.a-btn-danger {
  background-color: $red;
  &:hover {
    background: $red-hover-color;
    border: none;
  }
  &:active,
  &.active {
    background: $red-hover-color;
  }
  &:focus {
    background: $red-hover-color;
  }
}

.a-btn-border {
  background: transparent;
  border: 2px solid $blue-darker;
  color: $blue-darker;
  padding: 16px 24px;
  font-size: 24px;
  font-family: $font-medium;
  font-weight: $font-weight-medium;
  background: rgba(255, 255, 255, 0.5);
  line-height: 36px;
  &:hover,
  &:focus {
    background: $blue-darker;
    border: 2px solid $blue-darker;
    color: $white;
  }
  &:active,
  &.active {
    background: $blue-darker;
    color: $white;
  }
  @include media-breakpoint-up(lg) {
    font-size: 36px;
  }
}

// BTN WITH ICON
.a-btn-icon {
	height: 60px;
	width: 100%;
	text-align: left;
	background: transparent;

	&:hover,
	&:focus {
			background: transparent;
			color: $blue;
	}

	.a-btn-icon-symbol {
		font-size: 30px;
		padding-right: $spacer;
		vertical-align: middle;
		margin-top: -3px;
	}
}
// BTN WITH WHITE TRANSPARENCY

.a-btn-transparentWhite {
	background: $white-opacity;
	padding: $spacer;

	&:hover,
	&:focus {
			background: $white;
			color: $black;
	}

	.a-btn-icon-symbol {
		background: $blue;
		border-radius: 50px;
		color: $white;
		height: $spacer*3;
		width: $spacer*3;
    font-size: 22px;
    text-align: center;
    padding: 0px;
		padding-top: $spacer/2;
	}
	.a-btn-icon-text {
		padding-left: $spacer/2;
	}
}

.a-btn-transparentWhite-active,
.a-btn-transparentWhite-active:hover {
	background: $blue;
	color: $white;

	.a-btn-icon-symbol {
		background: $white;
		color: $blue;
	}
}

// BTN WITH SHADOW
.a-btn-shadow {
	background: $blue-light;
	box-shadow: 1px 1px 4px 0px rgba(137, 137, 137, 0.5);

	&:hover {
		background: darken($blue-light, 5%);
	}

	&:focus {
		background: darken($blue-light, 5%);
		color: $black;
		box-shadow: 1px 1px 4px 0px rgba(137, 137, 137, 0.5);
	}

	&.a-bgGreyLight {
		&:focus {
			background: darken($grey-light, 5%);
		}
	}

	.a-label {
		margin-top: -1px;
		margin-left: 12px;
	}
}

// Make button look like link
.a-btn-link {
  background: none;
  border: none;
  color: $black;
  padding: 0;
  padding-bottom: 2px;
  border-bottom: 2px solid $link-color;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  z-index: 1;
  box-shadow: none;
}

.a-btn-link:hover {
  text-decoration: none;
  border-bottom: 2px solid $blue-dark;
  color: $black;
}

.a-btn-link:not(.override-focus):focus:before {
  outline: none !important;
  box-shadow: $focusColor;
}

.a-btn-link:before {
  content: "";
  width: calc(100% + 24px);
  min-height: 48px;
  position: absolute;
  left: -12px;
  top: -11px;
  cursor: pointer;
  z-index: -1;
}

// add btn
.a-btn-action {
  border: 2px dotted $blue;
  padding: 4px 24px 4px 36px;
  background-color: transparent;
  color: #000;
  text-align: left;
  &:hover,
  &:focus {
    background: $blue-light;
    border: 2px dotted $blue;
    color: $black;
  }
  .a-btn-action-icon,
  .a-btn-action-iconPlus {
    font-size: 16px;
    position: absolute;
    top: 7px;
    left: 12px;
  }
  .a-btn-action-iconPlus {
    font-size: 24px;
    top: 4px;
  }
}

// BOX BUTTON
.a-box-button {
  border: 1px solid $grey-medium;
  padding: 12px 6px;
  cursor: pointer;
  width: 100%;
  background: #fff;
  position: relative;
  height: 182px;

  @include media-breakpoint-up(xl) {
    max-width: 182px;
  }
  .a-box-button-text {
    @include media-breakpoint-up(sm) {
      height: 66px;
      overflow: hidden;
    }
  }
  p {
    margin-bottom: 0px;
  }
  .a-box-button-icon {
    display: block;
    font-size: 60px;
  }
  .a-box-button-info {
    font-size: 20px;
    font-weight: bold;
    font-style: normal;
    color: #000;
    padding: $spacer/2 $spacer;
    margin: $spacer auto $spacer auto;
    background:  $grey-light;
    border-radius: 50px;
    width: auto;
    clear: both;
    text-align: center;
    display: table;
  }
  .a-box-button-action {
    // max-width: 182px;
    display: inline-block;
    font-size: 14px;
  }
  .a-box-button-action-arrow {
    font-size: 16px;
  }
  &:hover {
    background: $white-opacity;
    border: 4px solid $blue !important;
    padding: 9px 1px 9px 0px; 

    .a-box-button-info {
      background: $white;
    }
  }
  .a-meta-text {
    font-size: 14px;
  }
  .a-box-button-name {
    display: block;
    max-height: 50px;
    overflow-y: hidden;
    text-transform: uppercase;
    font-size: 14px;
  }
  &:focus {
    background: $blue-light;
  }
}

// BOX ADD BUTTON
.a-boxAddBtn {
  border: none;
  padding: 12px;
  background: transparent;
  width: 100%;
  max-width: 400px;
  cursor: pointer;
  .a-boxAddBtn-inner {
    border: 2px dotted $blue;
    padding: 24px 12px;
    height: 160px;
    display: block;
    .a-boxAddBtn-icon {
      display: block;
      font-size: 36px;
      padding: 12px;
    }
    &:hover {
      background: $white-opacity;
    }
  }
}

// FULL WIDTH ADD BUTTON
.a-fullWidthBtn {
  width: 100%;
  font-weight: bold;
  height: $spacer*4;
  i.a-btn-action-icon {
    top: 13px;
    margin-right: 24px;
  }
  span {
    margin-left: $spacer*3;
  }
}



// SWITCH ACTION (RADIO) BUTTON
.switch-container {
  width: 100%;
  height: $spacer*3;
  /*36px*/
  border: 2px solid $blue;
  .radio {
    position: relative;
    width: 50%;
    height: 100%;
  }
  .radio:first-of-type {
    float: left;
  }
  .radio:last-of-type {
    float: right;
  }
  .radio input {
    display: none;
  }
  .radio label {
    display: block;
    width: 100%;
    height: 100%;
    text-align: center;
    line-height: $spacer*3-4px;
    /*parent height - border*/
    background-color: $grey-light;
  }
  input[type="radio"]:checked+label {
    background-color: $blue;
  }
  input[type="radio"]:not(:checked)+label {
    &:hover {
      background-color: $blue-light;
    }
  }
}

// Buttons groups
.a-btn-group {
  a,
  button {
    margin-right: 12px;
    &:last-child {
      margin-right: 0;
    }
  }
}

.button-blue-no-underline {
  color: $blue-dark;
  border: none;
}

.button-blue-no-underline:hover,
.button-blue-no-underline:focus {
  color: $blue-dark;
  border: none;
}

